--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,36 @@ testbenches/D1_testbench/rtl_work/_lib1_0.qtl
 testbenches/D1_testbench/rtl_work/_vmake
 testbenches/D1_testbench/vsim.wlf
 testbenches/D1_testbench/wave.do
+testbenches/D1_testbench/rtl_work/_opt1__lock
+testbenches/D1_testbench/rtl_work/@_opt1/_lib.qdb
+testbenches/D1_testbench/rtl_work/@_opt1/_lib1_0.qdb
+testbenches/D1_testbench/rtl_work/@_opt1/_lib1_0.qpg
+testbenches/D1_testbench/rtl_work/@_opt1/_lib1_0.qtl
+testbenches/D1_testbench/rtl_work/@_opt1/_lib2_0.qdb
+testbenches/D1_testbench/rtl_work/@_opt1/_lib2_0.qpg
+testbenches/D1_testbench/rtl_work/@_opt1/_lib2_0.qtl
+testbenches/D1_testbench/rtl_work/@_opt1/_lib3_0.qdb
+testbenches/D1_testbench/rtl_work/@_opt1/_lib3_0.qpg
+testbenches/D1_testbench/rtl_work/@_opt1/_lib3_0.qtl
+testbenches/D1_testbench/rtl_work/@_opt1/_lib4_0.qdb
+testbenches/D1_testbench/rtl_work/@_opt1/_lib4_0.qpg
+testbenches/D1_testbench/rtl_work/@_opt1/_lib4_0.qtl
+testbenches/D1_testbench/rtl_work/@_opt1/_data/exempt39h95j
+testbenches/D1_testbench/rtl_work/@_opt1/_data/exemptOkBlBP
+testbenches/D1_testbench/rtl_work/@_opt1/_data/exemptZidRE6
+testbenches/D1_testbench/rtl_work/@_opt/_lib.qdb
+testbenches/D1_testbench/rtl_work/@_opt/_lib1_0.qdb
+testbenches/D1_testbench/rtl_work/@_opt/_lib1_0.qpg
+testbenches/D1_testbench/rtl_work/@_opt/_lib1_0.qtl
+testbenches/D1_testbench/rtl_work/@_opt/_lib2_0.qdb
+testbenches/D1_testbench/rtl_work/@_opt/_lib2_0.qpg
+testbenches/D1_testbench/rtl_work/@_opt/_lib2_0.qtl
+testbenches/D1_testbench/rtl_work/@_opt/_lib3_0.qdb
+testbenches/D1_testbench/rtl_work/@_opt/_lib3_0.qpg
+testbenches/D1_testbench/rtl_work/@_opt/_lib3_0.qtl
+testbenches/D1_testbench/rtl_work/@_opt/_lib4_0.qdb
+testbenches/D1_testbench/rtl_work/@_opt/_lib4_0.qpg
+testbenches/D1_testbench/rtl_work/@_opt/_lib4_0.qtl
+testbenches/D1_testbench/rtl_work/@_opt/_data/exemptD2lSJq
+testbenches/D1_testbench/rtl_work/@_opt/_data/exemptpsZ8AC
+testbenches/D1_testbench/rtl_work/@_opt/_data/exemptuU6a6S
