Files generated from scripts also renamed templates for LUT and mult implemenetation

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@ testbenches/D1_testbench/rtl_work/@_opt/_lib4_0.qtl
 testbenches/D1_testbench/rtl_work/@_opt/_data/exemptD2lSJq
 testbenches/D1_testbench/rtl_work/@_opt/_data/exemptpsZ8AC
 testbenches/D1_testbench/rtl_work/@_opt/_data/exemptuU6a6S
+testbenches/D1_testbench/rtl_work/_opt__lock
+testbenches/D1_testbench/rtl_work/@_opt/_data/exemptbQQEkV
+testbenches/D1_testbench/rtl_work/@_opt/_data/exemptNkIHfW
+testbenches/D1_testbench/rtl_work/@_opt/_data/exemptrZ1RzB
