files modified after debugging for quartus compile

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,36 @@ testbenches/D1_testbench/rtl_work/_opt__lock
 testbenches/D1_testbench/rtl_work/@_opt/_data/exemptbQQEkV
 testbenches/D1_testbench/rtl_work/@_opt/_data/exemptNkIHfW
 testbenches/D1_testbench/rtl_work/@_opt/_data/exemptrZ1RzB
+testbenches/D1_testbench/MER_Calc.ods
+testbenches/D2_testbench/modelsim.ini
+testbenches/D2_testbench/vsim.wlf
+testbenches/D2_testbench/wave.do
+testbenches/D2_testbench/rtl_work/_info
+testbenches/D2_testbench/rtl_work/_lib.qdb
+testbenches/D2_testbench/rtl_work/_lib1_0.qdb
+testbenches/D2_testbench/rtl_work/_lib1_0.qpg
+testbenches/D2_testbench/rtl_work/_lib1_0.qtl
+testbenches/D2_testbench/rtl_work/_opt__lock
+testbenches/D2_testbench/rtl_work/_vmake
+testbenches/D2_testbench/rtl_work/@_opt/_lib.qdb
+testbenches/D2_testbench/rtl_work/@_opt/_lib1_0.qdb
+testbenches/D2_testbench/rtl_work/@_opt/_lib1_0.qtl
+testbenches/D2_testbench/rtl_work/@_opt/_lib1_0.qpg
+testbenches/D2_testbench/rtl_work/@_opt/_lib2_0.qdb
+testbenches/D2_testbench/rtl_work/@_opt/_lib2_0.qpg
+testbenches/D2_testbench/rtl_work/@_opt/_lib2_0.qtl
+testbenches/D2_testbench/rtl_work/@_opt/_lib3_0.qdb
+testbenches/D2_testbench/rtl_work/@_opt/_lib3_0.qpg
+testbenches/D2_testbench/rtl_work/@_opt/_lib3_0.qtl
+testbenches/D2_testbench/rtl_work/@_opt/_lib4_0.qdb
+testbenches/D2_testbench/rtl_work/@_opt/_lib4_0.qpg
+testbenches/D2_testbench/rtl_work/@_opt/_lib4_0.qtl
+testbenches/D2_testbench/rtl_work/@_opt/_lib5_0.qdb
+testbenches/D2_testbench/rtl_work/@_opt/_lib5_0.qpg
+testbenches/D2_testbench/rtl_work/@_opt/_lib5_0.qtl
+testbenches/D2_testbench/rtl_work/@_opt/_lib6_0.qpg
+testbenches/D2_testbench/rtl_work/@_opt/_lib6_0.qdb
+testbenches/D2_testbench/rtl_work/@_opt/_lib6_0.qtl
+testbenches/D2_testbench/rtl_work/@_opt/_data/exempt5sWGXj
+testbenches/D2_testbench/rtl_work/@_opt/_data/exempth04Wmc
+testbenches/D2_testbench/rtl_work/@_opt/_data/exemptOEu8sf
